// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown should render 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-0-menu"
        role="combobox"
      >
        <label
          for="downshift-0-input"
          id="downshift-0-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-0-menu"
              aria-labelledby="downshift-0-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdownInput__input"
              id="downshift-0-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdfBwQ gLRWTb transition-transform "
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-0-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render disabled 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-4-menu"
        role="combobox"
      >
        <label
          for="downshift-4-input"
          id="downshift-4-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 bPzSMW"
          disabled=""
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-4-menu"
              aria-labelledby="downshift-4-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
              data-testid="SelectDropdownInput__input"
              disabled=""
              id="downshift-4-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdfBwQ gLRWTb transition-transform "
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-4-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-4-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render invalid 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 iXDeQC sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          aria-invalid="true"
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="sc-bdfBwQ iyevwF text-theme-danger-500"
            height="20"
            width="20"
          >
            <svg>
              alert-warning.svg
            </svg>
          </div>
        </span>
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-2-menu"
        role="combobox"
      >
        <label
          for="downshift-2-input"
          id="downshift-2-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              aria-labelledby="downshift-2-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdownInput__input"
              id="downshift-2-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdfBwQ gLRWTb transition-transform "
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-2-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-2-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value="3"
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-112-menu"
        role="combobox"
      >
        <label
          for="downshift-112-input"
          id="downshift-112-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-112-menu"
              aria-labelledby="downshift-112-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdownInput__input"
              id="downshift-112-input"
              placeholder="Select option"
              value="3"
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdfBwQ gLRWTb transition-transform "
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-112-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-112-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-17-menu"
        role="combobox"
      >
        <label
          for="downshift-17-input"
          id="downshift-17-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-17-menu"
              aria-labelledby="downshift-17-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdownInput__input"
              id="downshift-17-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdfBwQ gLRWTb transition-transform "
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-17-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-17-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value="3"
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-12-menu"
        role="combobox"
      >
        <label
          for="downshift-12-input"
          id="downshift-12-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-12-menu"
              aria-labelledby="downshift-12-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdownInput__input"
              id="downshift-12-input"
              placeholder="Select option"
              value="Option 3"
            />
            <span
              class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none cursor-default"
              data-testid="Input__suggestion"
            >
              Option 3
            </span>
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdfBwQ gLRWTb transition-transform "
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-12-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-12-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-19-menu"
        role="combobox"
      >
        <label
          for="downshift-19-input"
          id="downshift-19-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-19-menu"
              aria-labelledby="downshift-19-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdownInput__input"
              id="downshift-19-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdfBwQ gLRWTb transition-transform "
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-19-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-19-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-15-menu"
        role="combobox"
      >
        <label
          for="downshift-15-input"
          id="downshift-15-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-15-menu"
              aria-labelledby="downshift-15-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdownInput__input"
              id="downshift-15-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdfBwQ gLRWTb transition-transform "
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-15-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-15-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render without caret 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-6-menu"
        role="combobox"
      >
        <label
          for="downshift-6-input"
          id="downshift-6-label"
        />
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-6-menu"
              aria-labelledby="downshift-6-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdownInput__input"
              id="downshift-6-input"
              placeholder="Select option"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="downshift-6-label"
          class="styles__SelectOptionsList-b2falt-0 cUNLQk"
          id="downshift-6-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;
